fix Timer alignment

--- a/src/app/containers/scoreboard/score/score.component.scss
+++ b/src/app/containers/scoreboard/score/score.component.scss
@@ -34,4 +34,5 @@ button {
   outline: none;
   text-transform: uppercase;
   font-family: vars.$font-stack;
+  padding: 5px 10px;
 }
