--- a/src/app/containers/scoreboard/scoreboard.component.scss
+++ b/src/app/containers/scoreboard/scoreboard.component.scss
@@ -29,11 +29,11 @@ mat-card-content {
 
   .scoreboard__score {
     margin: 0;
-    height: 35px;
   }
 
   .scoreboard__timer {
-    margin: 0;
+    margin-top: 15px;
+    margin-right: -50px;
   }
 
   .scoreboard__score,
